<?xml version="1.0"?>
<package format="3">
  <name>kuka_kr16_support</name>
  <version>0.0.1</version>
  <description>TODO</description>
  <maintainer email="dominic@aica.tech">Dominic Reber</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>